# QtProject

localRS/: CMakeLists.txt  Todo.md  main.cpp
localRS/exmod/Notification/: Notification.cpp  Notification.h  NotificationView.qml
localRS/exmod/SessionMessage/: SessionMessage.cpp  SessionMessage.h  SessionMessageView.qml
localRS/exmod/SettingItem/: SettingItem.cpp  SettingItem.h  SettingItemView.qml
localRS/inc/: future.h
localRS/inc/core/: GlobalConfig.h  ViewModel.h  connection.h  core.h  doc.md  gsc.h
localRS/inc/interface/: IDataEndpoint.h  IDevice.h  IGlobalManager.h  ISession.h  ISettingsLoad.h
localRS/inc/manager/: SettingsManager.h  ViewManager.h  WindowCtrler.h
localRS/inc/model/: SessionMsgListModel.h  SettingListModel.h
localRS/inc/service/: bluetoothSession.h  networkSession.h  serialSession.h  themeSettings.h  usbSession.h  usbWarpper.h
localRS/inc/view/: mainview.h  settings.h
localRS/res/styles/: config.qml  cus_Buttom.qml
localRS/src/core/: GlobalConfig.cpp  core.cpp  gsc.cpp
localRS/src/manager/: SettingsManager.cpp  ViewManager.cpp  WindowCtrler.cpp
localRS/src/model/: SettingListModel.cpp
localRS/src/service/: networkSession.cpp  serialSession.cpp  themeSettings.cpp  usbSession.cpp
localRS/src/view/: Mainview.cpp  settings.cpp
localRS/ui/: Mainview.qml  SessionView.qml  Settings.qml
